--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/node_logs_tabs.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/node_logs_tabs.html
@@ -1,6 +1,6 @@
 <logs-content>
-  <h3>Technical logs from Directives applied to this node</h3>
-  <p class="reportsHeader">The table below contains all the technical logs received from this node. These are used to calculate Compliance (see previous tab), and may be useful in analyzing problems, or obtaining details in the case of automatic repairs.</p>
+  <h3 class="page-title">Technical logs from Directives applied to this node</h3>
+  <p class="help-block">The table below contains all the technical logs received from this node. These are used to calculate Compliance (see previous tab), and may be useful in analyzing problems, or obtaining details in the case of automatic repairs.</p>
   <div id="filterLogs" class="reportsHeader">
     Get technical logs between
     <input type="text" class="pickStartInput form-control input-xs"/>
