--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
@@ -1,49 +1,61 @@
 <lift:surround with="common-layout" at="content">
 
 <head>
-    <title>Rudder - Search Nodes</title>
+    <title>Rudder - Node search</title>
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-tags.css"  media="screen">
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-node.css" media="screen">
-    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/angular/elastic.min.js"></script>
-    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/auditMode.js"></script>
-    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/nodeProperties.js"></script>
-</head>
-
-<div class="portlet">
-  <div class="portlet-header page-title">Nodes</div>
-  <div class="portlet-content">
-    <div data-lift="node.SearchNodes.head"></div>
-    <div class="inner-portlet">
-      <div class="inner-portlet-content">
-        <div id="query-search-content">
-          <div class="callout-fade callout-info">
-            <div class="marker">
-              <span class="glyphicon glyphicon-info-sign"></span>
+    <style>
+      .rudder-template > .one-col{
+        flex: 1;
+      }
+      .template-main{
+        flex-basis : initial !important;
+        flex: auto !important;
+      }
+    </style>
+  <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/angular/elastic.min.js"></script>
+  <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/auditMode.js"></script>
+  <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/angular/nodeProperties.js"></script>
+  </head>
+  <div class="rudder-template">
+    <div class="one-col">
+      <div class="main-header">
+        <div class="header-title">
+          <h1>
+            <span>Node search</span>
+          </h1>
+        </div>
+        <div class="header-description">
+          <p>
+            Find nodes in your Rudder infrastructure that match different criteria.
+            Define <a href="/secure/nodeManager/groups">node groups</a> from your search results.
+          </p>
+        </div>
+      </div>
+      <div class="one-col-main">
+        <div class="template-main">
+          <div class="main-container">
+            <div class="main-details">
+              <div id="query-search-content">
+                <div class="inner-portlet-content">
+                  <div id="SearchNodes">
+                    <div data-lift="node.SearchNodes.showQuery"></div>
+                  </div>
+                  <lift:authz role="group_write">
+                    <div data-lift="node.SearchNodes.createGroup"></div>
+                  </lift:authz>
+                </div>
+              </div>
             </div>
-            <div>
-              <h4>Query based search</h4>
-              Find nodes in your Rudder infrastructure that match different criteria.<br />
-              Define <a href="/secure/nodeManager/groups">node groups</a> from your search results.
-            </div>
-          </div>
-          <div class="inner-portlet-content">
-            <div id="SearchNodes">
-              <div data-lift="node.SearchNodes.showQuery"></div>
-            </div>
-            <lift:authz role="group_write">
-              <div data-lift="node.SearchNodes.createGroup"></div>
-            </lift:authz>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div id="createGroupPopup" class="modal fade" data-keyboard="true" tabindex="-1">
-  <lift:ignore>
-    This div gets the content of the createCategoryOrGroup injected within
-  </lift:ignore>
-  <div id="createGroupContainer"></div>
-</div>
-
+  <div id="createGroupPopup" class="modal fade" data-keyboard="true" tabindex="-1">
+    <lift:ignore>
+      This div gets the content of the createCategoryOrGroup injected within
+    </lift:ignore>
+    <div id="createGroupContainer"></div>
+  </div>
 </lift:surround>
