Fixes #7967: Make fields of node lists customizable

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -24,6 +24,7 @@
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-quicksearch.css" media="screen" />
 
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/datatables/rowGroup-bootstrap-1.1.0.min.css" media="screen" />
+    <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/datatables/fixedHeader-bootstrap-3.1.7.min.css" media="screen" />
 
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/AdminLTE/AdminLTE.min.css"/>
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-menu.css"/>
@@ -37,6 +38,7 @@
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jstree/jquery.jstree.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/datatables.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/dataTables-rowGroup-1.1.0.min.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/dataTables-fixedHeader-3.1.7.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/datatables-natural-sorting-1.10.20.js"></script>
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jquery-ui.min.js"></script>
