Fixes #18474: Width of the Directive tree changes according to the selected Directive.

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/healthcheck.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/healthcheck.html
@@ -3,6 +3,7 @@
         <head_merge>
             <title>Healthcheck</title>
             <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-template.css"/>
+            <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-healthcheck.css"/>
             <script data-lift="with-cached-resource" src="/javascript/rudder/elm/rudder-healthcheck.js"></script>
         </head_merge>
 
