Fixes #18477: Improve health check texts

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/healthcheck.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/healthcheck.html
@@ -1,7 +1,7 @@
 <lift:surround with="common-layout" at="content">
     <div id="healthcheck-main">
         <head_merge>
-            <title>Healthcheck</title>
+            <title>Health check</title>
             <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-template.css"/>
             <script data-lift="with-cached-resource" src="/javascript/rudder/elm/rudder-healthcheck.js"></script>
         </head_merge>
@@ -11,11 +11,11 @@
                 <div class="main-header">
                     <div class="header-title">
                         <h1>
-                            <span>Health Check</span>
+                            <span>Health check</span>
                         </h1>
                     </div>
                     <div class="header-description">
-                        This page shows the health of RUDDER
+                        Get an overview of Rudder server's health
                     </div>
                 </div>
                 <div class="one-col-main">
