--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -316,6 +316,8 @@
             <ul class="nav navbar-nav" id="rudder-navbar">
               <!-- Plugin license warning -->
              <div data-lift="PluginExpirationInfo.render"></div>
+              <!-- Health check warning -->
+             <div data-lift="HealthcheckInfo.render"></div>
               <!-- Promise Generation -->
               <li class="lift:comet?type=AsyncDeployment" name="deploymentStatus"></li>
               <li class="tasks-menu">
