Fixes #18491: Error about missing image in 6.2

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
@@ -29,7 +29,7 @@
 
         </div>
         <lift:Msgs>[error]</lift:Msgs>
-        <div  data-lift="lazy-load">
+        <div  data-lift="lazy-load?template=lazy-load-spinner">
           <div data-lift="node.AcceptNode.list">
             <pending-servers></pending-servers>
             <div id="acceptNodeGrid_paginate_area" class="nodisplay"></div>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div id="history"><div data-lift="lazy-load">
+      <div id="history"><div data-lift="lazy-load?template=lazy-load-spinner">
         <div class="callout-fade callout-info">
           <div class="marker">
             <span class="glyphicon glyphicon-info-sign"></span>
