Fixes #18571: missing (404) favicon in rudder loading page

--- a/webapp/sources/rudder/rudder-web/src/main/resources/load-page/rudder-not-loaded.html
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/load-page/rudder-not-loaded.html
@@ -4,44 +4,25 @@
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <title>Rudder - 404</title>
-  <link type="image/png" rel="icon" data-lift="with-cached-resource" href="/images/favicon.png">
-  <link type="image/x-icon" rel="shortcut icon" data-lift="with-cached-resource" href="/images/favicon.ico">
+  <link type="image/x-icon" rel="shortcut icon" data-lift="with-cached-resource" href="../../webapp/images/rudder-favicon.ico">
   <style type="text/css">
     @font-face {
       font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-Light.ttf') format('truetype');
+      src: url('files/fonts/SourceSansPro-Light.ttf') format('truetype');
       font-weight: lighter;
       font-style: normal;
     }
     @font-face {
       font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-LightItalic.ttf') format('truetype');
-      font-weight: lighter;
-      font-style: italic;
-    }
-    @font-face {
-      font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-Regular.ttf') format('truetype');
+      src: url('files/fonts/SourceSansPro-Regular.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
     @font-face {
       font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-Italic.ttf') format('truetype');
-      font-weight: normal;
-      font-style: italic;
-    }
-    @font-face {
-      font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-Semibold.ttf') format('truetype');
+      src: url('files/fonts/SourceSansPro-Semibold.ttf') format('truetype');
       font-weight: bold;
       font-style: normal;
-    }
-    @font-face {
-      font-family: 'SourceSansPro';
-      src: url('/files/fonts/SourceSansPro-SemiboldItalic.ttf') format('truetype');
-      font-weight: bold;
-      font-style: italic;
     }
     html, body {
        margin:0;
@@ -53,7 +34,7 @@
       color: #9b9b9b;
       overflow-y: hidden;
       background-color: #fff;
-      background-image: url("/files/pattern.png");
+      background-image: url("files/pattern.png");
     }
     svg{
       width: 100%;
