Fixes #18590: Rename node menu entries for consistency

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/manageNewNode.html
@@ -6,9 +6,9 @@
 </head>
 
 <div class="portlet">
-  <div class="portlet-header page-title">Accept new Nodes</div>
+  <div class="portlet-header page-title">Pending nodes</div>
   <div class="page-title-description">
-    Accept or refuse Nodes in your infrastructure that have declared themselves to Rudder by sending an inventory report. To add new nodes, install the rudder-agent package on a machine, and follow the instructions provided.
+    Accept or refuse nodes in your infrastructure that have declared themselves to Rudder by sending an inventory report. To add new nodes, install the rudder-agent package on a machine, and follow the instructions provided.
   </div>
 
   <div class="portlet-content">
