Fixes #18609: Column names in pending and accepted nodes are different

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/expected_policy_popup.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/expected_policy_popup.html
@@ -28,8 +28,8 @@
                     <table id="pendingNodeConfirm">
                       <thead>
                         <tr class="head">
-                          <th>Node name</th>
-                          <th>Operating system</th>
+                          <th>Hostname</th>
+                          <th>OS</th>
                         </tr>
                       </thead>
                       <tbody id="serverHeadInformation">
