--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/pending_history_grid.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/pending_history_grid.html
@@ -10,8 +10,8 @@
     <thead>
       <tr class="head">
         <th>Action date</th>
-        <th>Node name</th>
-        <th>Operating System</th>
+        <th>Hostname</th>
+        <th>OS</th>
         <th>State</th>
         <th>User</th>
       </tr>
