--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server_grid.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server_grid.html
@@ -9,8 +9,8 @@
   <table class="fixedlayout" cellspacing="0">
   <thead>
     <tr class="head" id="header">
-      <th>Node name</th>
-      <th>Operating system</th>
+      <th>Hostname</th>
+      <th>OS</th>
       <th>IP addresses</th>
     </tr>
   </thead>
