--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/srv_grid.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/srv_grid.html
@@ -9,8 +9,8 @@
   <servergrid-table cellspacing="0">
     <thead>
       <tr class="head">
-        <th>Node name</th>
-        <th>Operating system</th>
+        <th>Hostname</th>
+        <th>OS</th>
         <servergrid-header></servergrid-header>
       </tr>
     </thead>
