--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/accept_new_server.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/Popup/accept_new_server.html
@@ -26,8 +26,8 @@
                     <table id="pendingNodeConfirm" class="space-bottom">
                       <thead>
                         <tr class="head">
-                          <th>Node name</th>
-                          <th>Operating system</th>
+                          <th>Hostname</th>
+                          <th>OS</th>
                         </tr>
                       </thead>
                       <tbody id="server_lines">
