Fixes #18658: Link to plugins in Rudder interface should point directly to plugins list

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
@@ -18,7 +18,8 @@
             Plugins can extend Rudder’s base functionality to add extra features. They can be either open source or proprietary (this is up to the plugin author).
           </p>
           <p>
-            Available plugins are documented in <a href="https://www.rudder.io/en/use/plugins/">Rudder Plugin page</a>.
+            Learn about available plugins on our <a href="https://www.rudder.io/software/plugins/">website</a>, or directly
+            <a href="https://www.rudder.io/software/plugins/self-service-plugins/plugins-repository/">download free plugins</a>.
           </p>
         </div>
       </div>
